<resources>
    <string name="app_name">陸劇小說大全</string>

    <string name="umeng_key">5b853c8ab27b0a538c000051</string>

    <string name="baidu_app_id">9942412</string>
    <string name="baidu_app_key">5cZ5UKGW2tqEXK0dUiv4ngLEQ7I4Bf6s</string>

    <string name="net_error_10001">没有网络</string>
    <string name="net_error_10002">网络连接超时</string>
    <string name="net_error_10003">数据解析失败</string>

    <string name="tv_read_durprogress">观看至:%s</string>
    <string name="tv_book_name">《%s》</string>
    <string name="tv_searchbook_lastest">最新章节:%s</string>
    <string name="tv_pop_checkaddshelf">是否将《%s》放入书架？</string>
    <string name="tv_importbook_count">共%s个Text文件</string>

    <string name="bannerunit">ca-app-pub-9224978836240566/5689984536</string>
    <string name="ad_unit_id">ca-app-pub-9224978836240566/1570259202</string>
    <string name="openscreen">ca-app-pub-4391447140300687/5225384052</string>
    <string name="remove_ad">Remove ads</string>
    <string name="downtitle">Free Trial Remove ads</string>
    <string name="one">No Ads.</string>
    <string name="two">Totally use offline.</string>
    <string name="three">No Connection required. No roaming charge.</string>

    <string name="dialog_title">Free trial program</string>
    <string name="btn_bottom">No,thanks</string>
    <string name="content">It is with great pleasure that we invite you to free trial PRO edition for 7days.PRO edition had removed all ads.</string>
    <string name="btn_top">Try it now</string>
    <string name="title">热门电视剧小说大全</string>

    <string name="rate">评分鼓励</string>
    <string name="tip">This subscription gives you unlimited access to our app content library.If you don\'t cancel before the trial ends,you will be automaticaly charged $6.99 each month until you cancel.</string>
</resources>