<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/haha">
        <TextView
            android:id="@+id/tishi"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:paddingLeft="15dp"
            android:text="@string/dialog_title"
            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>
        <TextView

            android:id="@+id/unlockmap"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:paddingLeft="15dp"
            android:text="@string/content"
            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginBottom="3dp"
            android:orientation="vertical">
            <TextView
                android:layout_weight="1"
                android:id="@+id/rating_but"
                android:textColor="@color/appcolor"
                android:textSize="17dp"
                android:gravity="center"
                android:text="@string/btn_top"
                android:layout_height="55dp"
                android:visibility="visible"
                android:layout_width="fill_parent"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:visibility="visible"
                android:background="@color/gray"/>
            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/appcolor"
                android:textSize="17dp"
                android:id="@+id/watch_video_ad_but"
                android:text="@string/btn_bottom"
                android:layout_width="fill_parent"
                android:layout_height="55dp"/>
        </LinearLayout>
    </LinearLayout>
    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:orientation="horizontal">
         <Button
             android:id="@+id/rating_but"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <Button
             android:id="@+id/watch_video_ad_but"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 -->
</LinearLayout>
