<?xml version="1.0" encoding="utf-8"?>
<com.monke.immerselayout.ImmerseFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#767676">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="119dp"
                android:layout_height="21dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:visibility="gone"
                android:src="@drawable/icon_monkovel_black" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/ib_money"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:background="@drawable/bg_ib_pre"
                android:src="@drawable/selector_iv_money"
                android:visibility="gone" />
            <ImageButton
                android:id="@+id/ib_download"
                android:visibility="gone"
                android:layout_width="44dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="3dp"
                android:background="@drawable/bg_ib_pre"
                android:src="@drawable/selector_icon_donwload_main"
                android:transitionName="ic_search" />
            <ImageButton
                android:id="@+id/ib_library"
                android:visibility="gone"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:background="@drawable/bg_ib_pre"
                android:src="@drawable/selector_iv_library"
                android:transitionName="ic_search" />

            <ImageButton
                android:id="@+id/ib_add"
                android:visibility="gone"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:background="@drawable/bg_ib_pre"
                android:src="@drawable/selector_iv_add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_centerInParent="true"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/tv_title"/>

            <TextView
                android:id="@+id/tv_remove_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#007AFF"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/remove_ad"
                android:textSize="15sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#007AFF"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/rate"
                android:textSize="15sp"
                android:layout_centerVertical="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line_bg"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <com.minnovel.weiweiyixiaohenqingcheng.widget.refreshview.RefreshRecyclerView
            android:id="@+id/rf_rv_shelf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:bg_color="#00000000"
            app:font_color="#767676"
            app:second_color="#c1c1c1"
            app:second_max_progress="80dp"
            app:speed="2dp" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fl_warn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#70000000">
        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="所有小说来源均来自各个网站，本APP仅提供转载服务"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:singleLine="true"
            android:ellipsize="marquee"/>
        <ImageView
            android:visibility="gone"
            android:id="@+id/iv_warn_close"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:paddingLeft="13dp"
            android:paddingRight="8dp"
            android:layout_gravity="center_vertical|right"
            android:src="@drawable/icon_close"/>
    </FrameLayout>
</com.monke.immerselayout.ImmerseFrameLayout>